solc_mutator_ossfuzz_seed_corpus/test_sol/test_a042d96d476d029848884c96b7e1dcaf0ca4de1c473360470962291941a9e48b_c7df665ba310ff25bfb13fa1e79142040e915910_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bytes memory i0,uint64 i1) 
{ }
function f1()  returns(bool o0)
{

  {


  }

  {


unchecked {

  {



  }
}

f0("94ee0244610a6b47699a7e39c8c217cb",(((9639432549568659536 >> 18016109328287240936) >> 15572029276106102750) + 3169608638566898816));
  }




}

==== Source: su1.sol ====
function f2(function () external i0,uint152 i1,bytes7 i2,function () external i3)  returns(int16 o0,function () external o1,bool o2)
{ }
pragma abicoder v2;
pragma solidity >= 0.0.0;
import "su0.sol";

==== Source: su2.sol ====
contract C0 {
}
// ----
// TypeError 2271: (su0.sol:184-227): Operator >> not compatible with types int_const 9639432549568659536 and int_const 18016109328287240936
// TypeError 2271: (su0.sol:183-252): Operator >> not compatible with types int_const 9639432549568659536 and int_const 15572029276106102750
